syntax = "proto3";

import "Direction.proto";
import "StatusSequence.proto";

message GeneralOrderInformation {
    uint64 id = 1;
    Direction direction = 2;
    StatusSequence status_sequence = 3;
    string currency_pair_name = 4;
    float currency_pair_value = 5;
    float init_currency_pair_value = 6;
    int32 init_volume = 7;
    float fill_currency_pair_value = 8;
    int32 fill_volume = 9;;
    int32 statuses_in_blue_zone = 10;
    string tags = 11;
    string description = 12;
}



